Fixed video player alignment

--- a/client/src/components/Explore.scss
+++ b/client/src/components/Explore.scss
@@ -24,8 +24,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  // margin-left: 10%;
-  // margin-right: 10%;
   padding-top: 1em;
   height: 100%;
   width: 100%;
@@ -87,7 +85,6 @@
   font-weight: bold;
   font-size: large;
   letter-spacing: 1px;
-  // padding: 1em;
   margin: 0.5em;
 }
 
@@ -111,21 +108,13 @@
   display: flex;
   max-width: 100%;
   margin-bottom: 1em;
-  // padding: 1em;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  // border-radius: 25px;
-  // opacity: 0.90;
-  // background-color: whitesmoke;
-  // opacity: 0.90;
-  // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .display-img-container {
   display: flex;
-  // flex-direction: column;
-  // max-height: 10em;
   max-width: 20em;
   display: flex;
   align-items: center;
@@ -137,7 +126,6 @@
   max-width: 100%;
   max-height: 100%;
   opacity: 1;
-  // padding-bottom: 0.5em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -186,7 +174,8 @@
 /*---------- EXPLORE PLAYER ----------*/
 
 .explore-player-container {
-  max-height: 100%;
+  max-height: fit-content;
+  margin-bottom: 1em;
 }
 
 .modal-video {
